--- a/index.html
+++ b/index.html
@@ -10,6 +10,10 @@
 <body>
   <h1>Boilerplate parcel</h1>
 
+  <div id="wrap" class="d-flex flex-wrap">
+
+  </div>
+
   <script src="./js/app.js"></script>
 </body>
 </html>
